--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
+        "lib-flexible": "^0.3.2",
+        "px2rem-loader": "^0.1.9",
         "vue": "^2.5.2",
         "vue-axios": "^2.1.4",
         "vue-router": "^3.0.1",
