--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
+        "better-scroll": "^1.15.1",
         "lib-flexible": "^0.3.2",
         "px2rem-loader": "^0.1.9",
         "vue": "^2.5.2",
