--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-axios": "^2.1.4",
     "vue": "^2.6.10",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
